adding responsive design

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
 <header>
+  <h2>Chaz Creech</h2>
   <nav>
     <a href="./index.html">About</a>
     <a href="./project.html">Projects</a>
     <a href="./resume.html">Resume</a>
   </nav>
+  <a href="#" id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
 </header>
 <main>
   <div class="grid-layout">
@@ -26,17 +28,25 @@
         when I was introduced the opportunity to write programs in Javascript.
         In addition, I took an elective the high school offered which is
         called Web Design and, it introduced me to building websites in HTML
-        and CSS. Since then, I have great interests in designing and building
+        and CSS. Since then, I have a great interest in designing and building
         Web Apps. Scroll down for more information about me.
       </p>
     </div>
   </div>
-  <div class="grid-layout">
+  <div class="grid-layout-2">
     <div>
       <h1 id="experiences-section-title">My Experience</h1>
-      <img src="" alt=""/>
+      <img id="sunsphere-image" src="./resources/sunsphere.jpg" alt="Knoxville's Sun Sphere"/>
     </div>
-    <p></p>
+    <p id="experience-paragraph">
+      The first programming language I ever learned is JavaScript. Since
+      I learned JavaScript, I picked up learning Web Design, Python, and Java
+      which extended through college learning high-level languages like C++
+      and C-programming. Now, I have been learning front-end development and
+      user-experience design from educational platforms like Codecademy and
+      Coursera. I'm looking forward to obtaining two certificates as a Front-End
+      Engineer and Google UX Designer.
+    </p>
   </div>
 </main>
 <hr>
