Completing About Page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+<span id="navOverlay">
+  <div id="otherNav">
+    <a class="linkInNav" href="./index.html">About</a>
+    <a class="linkInNav" href="./project.html">Projects</a>
+    <a class="linkInNav" href="">Resume</a>
+  </div>
+  <a id="closeNav"><img height="25px" width="25px" src="./resources/close-icon.png" alt="Close Icon"/></a>
+</span>
 <header>
   <h2>Chaz Creech</h2>
   <nav>
     <a href="./index.html">About</a>
     <a href="./project.html">Projects</a>
-    <a href="./resume.html">Resume</a>
+    <a href="portfolio-project.html">Resume</a>
   </nav>
-  <a href="#" id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
+  <a id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
 </header>
 <main>
   <div class="grid-layout">
@@ -51,8 +59,11 @@
 </main>
 <hr>
 <footer>
+  <a id="linkedin-icon" target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147"><img src="resources/linkedin-icon.png" alt="LinkedIn Icon" height="25px" width="25px"/></a>
+  <a id="email-icon" href="mailto: chazcreech2023@gmail.com"><img src="resources/mail-icon.png" alt="Email Icon" height="25px" width="25px"/></a>
   <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147">Chaz Creech</a></p>
   <p>Email: <a href="mailto: chazcreech2023@gmail.com">chazcreech2023@gmail.com</a></p>
 </footer>
 </body>
+<script src="resources/script.js"></script>
 </html>
