--- a/portfolio-project.html
+++ b/portfolio-project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Projects - Chaz Creech's Portfolio</title>
+  <title>Resume - Chaz Creech's Portfolio</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
@@ -27,15 +27,11 @@
   </nav>
   <a id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
 </header>
+
 <main>
-  <h1 id="projects-page-title">Projects</h1>
-  <div class="projects-grid-layout">
-    <a href="portfolio-project.html"><img src="" alt=""/></a>
-  </div>
-  <div class="projects-grid-layout">
-  </div>
+
 </main>
-<hr>
+
 <footer>
   <a id="linkedin-icon" target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147"><img src="resources/linkedin-icon.png" alt="LinkedIn Icon" height="25px" width="25px"/></a>
   <a id="email-icon" href="mailto: chazcreech2023@gmail.com"><img src="resources/mail-icon.png" alt="Email Icon" height="25px" width="25px"/></a>
@@ -43,5 +39,4 @@
   <p>Email: <a href="mailto: chazcreech2023@gmail.com">chazcreech2023@gmail.com</a></p>
 </footer>
 </body>
-<script src="resources/script.js"></script>
 </html>
