--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   <div id="otherNav">
     <a class="linkInNav" href="./index.html">About</a>
     <a class="linkInNav" href="./project.html">Projects</a>
-    <a class="linkInNav" href="">Resume</a>
+    <a class="linkInNav" target="_blank" href="resources/New-Resume.docx">Resume</a>
   </div>
   <a id="closeNav"><img height="25px" width="25px" src="./resources/close-icon.png" alt="Close Icon"/></a>
 </span>
@@ -23,17 +23,21 @@
   <nav>
     <a href="./index.html">About</a>
     <a href="./project.html">Projects</a>
-    <a href="">Resume</a>
+    <a target="_blank" href="resources/New-Resume.docx">Resume</a>
   </nav>
   <a id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
 </header>
 <main>
   <h1 id="projects-page-title">Projects</h1>
   <div class="projects-grid-layout">
-    <a href="portfolio-project.html"><img src="" alt=""/></a>
+    <a id="portfolio-project-link" href="./portfolio-project.html">
+      <span id="portfolio-image-overlay"><p>Making of the Portfolio Website</p></span>
+      <img src="resources/portfolio-project-image.jpg" alt="Portfolio Project Snippet"/>
+    </a>
   </div>
+  <!--
   <div class="projects-grid-layout">
-  </div>
+  </div>-->
 </main>
 <hr>
 <footer>
