--- a/portfolio-project.html
+++ b/portfolio-project.html
@@ -14,7 +14,7 @@
   <div id="otherNav">
     <a class="linkInNav" href="./index.html">About</a>
     <a class="linkInNav" href="./project.html">Projects</a>
-    <a class="linkInNav" href="">Resume</a>
+    <a class="linkInNav" target="_blank" href="resources/New-Resume.docx">Resume</a>
   </div>
   <a id="closeNav"><img height="25px" width="25px" src="./resources/close-icon.png" alt="Close Icon"/></a>
 </span>
@@ -23,7 +23,7 @@
   <nav>
     <a href="./index.html">About</a>
     <a href="./project.html">Projects</a>
-    <a href="">Resume</a>
+    <a target="_blank" href="resources/New-Resume.docx">Resume</a>
   </nav>
   <a id="openNav"><img height="25px" width="25px" src="./resources/menu-icon.png" alt="Menu Icon"/></a>
 </header>
@@ -31,7 +31,7 @@
 <main>
 
 </main>
-
+<hr>
 <footer>
   <a id="linkedin-icon" target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147"><img src="resources/linkedin-icon.png" alt="LinkedIn Icon" height="25px" width="25px"/></a>
   <a id="email-icon" href="mailto: chazcreech2023@gmail.com"><img src="resources/mail-icon.png" alt="Email Icon" height="25px" width="25px"/></a>
