Finished portfolio project page

--- a/portfolio-project.html
+++ b/portfolio-project.html
@@ -98,8 +98,8 @@
     <img id="code-snippet-4" src="resources/code-snippet-4.png" alt="Screenshot of the CSS Code for when size is 550 pixels wide" />
   </div>
 </main>
-<hr>
-<footer>
+<hr class="specify-width-for-this-page">
+<footer class="specify-width-for-this-page">
   <a id="linkedin-icon" target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147"><img src="resources/linkedin-icon.png" alt="LinkedIn Icon" height="25px" width="25px"/></a>
   <a id="email-icon" href="mailto: chazcreech2023@gmail.com"><img src="resources/mail-icon.png" alt="Email Icon" height="25px" width="25px"/></a>
   <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/chaz-creech-12a3a3147">Chaz Creech</a></p>
