--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home - Chaz Creech's Portfolio</title>
+  <title>About - Chaz Creech's Portfolio</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
@@ -32,10 +32,10 @@
     <img id="profile" src="./resources/portfolio-profile.jpg" alt="Chaz Creech">
     <div id="main-story">
       <h1 id="name">Chaz Creech</h1>
-      <p>I started my career path in Sophomore year of Hardin Valley Academy
+      <p>I started my career path in my Sophomore year at Hardin Valley Academy
         when I was introduced the opportunity to write programs in Javascript.
         In addition, I took an elective the high school offered which is
-        called Web Design and, it introduced me to building websites in HTML
+        called Web Design and it introduced me to building websites in HTML
         and CSS. Since then, I have a great interest in designing and building
         Web Apps. Scroll down for more information about me.
       </p>
