--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+
+index.html
+Purpose: It is as simple as introducing my website which
+          describes a little bit about my interests and
+          experience.
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +38,7 @@
 </header>
 <main>
   <div class="grid-layout">
-    <img id="profile" src="./resources/portfolio-profile.jpg" alt="Chaz Creech">
+    <img id="profile" src="./resources/portfolio-profile.png" alt="Chaz Creech">
     <div id="main-story">
       <h1 id="name">Chaz Creech</h1>
       <p>I started my career path in my Sophomore year at Hardin Valley Academy
@@ -44,7 +53,7 @@
   <div class="grid-layout-2">
     <div>
       <h1 id="experiences-section-title">My Experience</h1>
-      <img id="sunsphere-image" src="./resources/sunsphere.jpg" alt="Knoxville's Sun Sphere"/>
+      <img id="graduation-tassel" src="./resources/graduation-tassel.JPG" alt="Knoxville's Sun Sphere"/>
     </div>
     <p id="experience-paragraph">
       The first programming language I ever learned is JavaScript. Since
