--- a/project.html
+++ b/project.html
@@ -1,3 +1,12 @@
+<!--
+
+project.html
+Purpose: Presents a long line of projects since this is a
+          portfolio website for clients and recruiters to
+          see the work I've done and how my skills evolved.
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,14 +39,15 @@
 <main>
   <h1 id="projects-page-title">Projects</h1>
   <div class="projects-grid-layout">
-    <a id="portfolio-project-link" href="./portfolio-project.html">
-      <span id="portfolio-image-overlay"><p>Making of the Portfolio Website</p></span>
-      <img src="resources/portfolio-project-image.jpg" alt="Portfolio Project Snippet"/>
-    </a>
+    <div class="portfolio-project-link">
+      <span class="portfolio-image-overlay"><a href="http://github.com/giterdone2025/chazCreechPortfolio"><p>Making of the Portfolio Website (GitHub)</p></a></span>
+      <img src="resources/portfolio-project-image.jpg" alt="Portfolio Project"/>
+    </div>
+    <div class="portfolio-project-link">
+      <span class="portfolio-image-overlay"><a href="https://github.com/giterdone2025/jammming-app/tree/main/jammming-for-react"><p>Making of Jammming (GitHub)</p></a></span>
+      <img src="resources/Jammming-Logo.png" alt="Jammming App"/>
+    </div>
   </div>
-  <!--
-  <div class="projects-grid-layout">
-  </div>-->
 </main>
 <hr>
 <footer>
