Add Jammming App Link

--- a/project.html
+++ b/project.html
@@ -40,11 +40,18 @@ Purpose: Presents a long line of projects since this is a
   <h1 id="projects-page-title">Projects</h1>
   <div class="projects-grid-layout">
     <div class="portfolio-project-link">
-      <span class="portfolio-image-overlay"><a href="http://github.com/giterdone2025/chazCreechPortfolio"><p>Making of the Portfolio Website (GitHub)</p></a></span>
+      <span class="portfolio-image-overlay"><a target="_blank" href="http://github.com/giterdone2025/chazCreechPortfolio"><p>Making of the Portfolio Website (GitHub)</p></a></span>
       <img src="resources/portfolio-project-image.jpg" alt="Portfolio Project"/>
     </div>
     <div class="portfolio-project-link">
-      <span class="portfolio-image-overlay"><a href="https://github.com/giterdone2025/jammming-app/tree/main/jammming-for-react"><p>Making of Jammming (GitHub)</p></a></span>
+      <span class="portfolio-image-overlay flex-jammming">
+        <a target="_blank" href="https://github.com/giterdone2025/jammming-app/tree/main/jammming-for-react">
+          <p>Making of Jammming Demo (GitHub)</p>
+        </a>
+        <a target="_blank" href="https://jammming-custom-spotify-playlist.netlify.app">
+          <p>Jammming App powered by Netlify</p>
+        </a>
+      </span>
       <img src="resources/Jammming-Logo.png" alt="Jammming App"/>
     </div>
   </div>
